<resources>
    <string name="app_name">Smart-Bandage App</string>

    <string name="title_location_permission">Location permission</string>
    <string name="text_location_permission">Bluetooth LE scanning requires location permission</string>
    <string name="btn_ok">OK</string>

    <string name="btn_get">Get</string>
    <string name="linear_acceleration_name">Linear Acceleration</string>
    <string name="angular_velocity_name">Angular Velocity</string>
    <string name="magnetic_field_name">Magnetic Field</string>
    <string name="heart_rate_name">Heart Rate</string>
    <string name="temperature_name">Temperature</string>
    <string name="led_name">Led</string>
    <string name="multi_subscription_name">Multi Subscription</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_wait">Please Wait...</string>
    <string name="please_wait_connecting">Connecting may take 10-30s \nPlease Wait...</string>
    <string name="connecting">Connecting</string>
    <string name="loading_information">Loading information...</string>
    <string name="kelvin">kelvin:</string>
    <string name="celsius">celsius:</string>
    <string name="rate">Rate:</string>
    <string name="y">y:</string>
    <string name="x">x:</string>
    <string name="z">z:</string>
    <string name="subscribe">Subscribe</string>
    <string name="test_magnetic_field">Test: Magnetic Field</string>
    <string name="test_heart_rate">Test: Heart Rate</string>
    <string name="value">Value:</string>
    <string name="test_led">Test: Led</string>
    <string name="off_on">OFF / ON</string>
    <string name="response">Response:</string>
    <string name="waiting_for_action">Waiting for action</string>
    <string name="test_linear_acceleration">Test: Linear Acceleration</string>
    <string name="test_multi_subscription">Test: Multi Subscription</string>
    <string name="test_temperature">Test: Temperature</string>
    <string name="waiting_for_response">Waiting for response</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="write_external_storage_permission_title">Write External Storage Permission</string>
    <string name="write_external_storage_permission_text">Saving files required Write External Storage Permission</string>
    <string name="test_angular_velocity">Test: Angular Velocity</string>
    <string name="no_network_connection_available">No network connection available.</string>
    <string name="log_out_from_drive">Log Out From Drive</string>
    <string name="refresh_files">Refresh Files</string>
    <string name="change_account">Change Account</string>
    <string name="log_in">Log In</string>

    <string name="Movesense">SMRL Sensor</string>
    <string name="Saved_Data">Saved Data</string>
    <string name="movesense_device_name">Movesense</string>
    <string name="dfu_device_name">DfuTarg</string>
    <string name="movesense_sw_version">Movesense Sw Version: </string>
    <string name="dfu_zip_sw_version">DFU zip Sw Version: </string>
    <string name="movesense_sw_version_device_must_be_connected">Movesense Sw Version: Device must be connected</string>
    <string name="select_file_and_device">Select File and Device</string>
    <string name="disconnect_dialog_text">Leaving from this view will disconnect You with device. Are You sure want leave?</string>
    <string name="application_version">Application Version: %s</string>
    <string name="library_version">Library Version: %s</string>
    <string name="energy_value_to_low_for_update">Energy value is to low for update</string>
    <string name="ecg">ECG</string>
    <string name="battery_energy">Battery</string>
    <string name="battery_value">Battery value : </string>
    <string name="note_text">Important Note:\n  On some phones Subscripton with rate higher than 104 Hz can cause Bluetooth connection problem and restart app might be required.</string>
    <string name="multisubscribe_note_text">Important Note:\n  On some phones Subscribing 3(and more) sensors can cause Bluetooth connection problem and restart app might be required.</string>
    <string name="settings_name">Settings</string>
    <string name="exit">Exit</string>
    <string name="imu_name">Imu</string>
    <string name="Memory_Diagnostic">Memory Diagnostic</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rr">RR [ms]:</string>
    <string name="bpm">Beat interval [bpm]:</string>
    <string name="heart_rate">Heart rate:</string>
    <string name="beat_interval">Beat interval:</string>
    <string name="pulse_oximeter">Pulse Oximeter</string>
    <string name="pulseOximeterInstruct">Subscribe to Pulse Oximeter data here. This sensor is not yet implemented.</string>
    <string name = "connectionInstruction">Scanning for bluetooth devices. Select a device below to connect.</string>
    <string name="bluetooth_connect">Bluetooth Connect</string>
    <string name = "account_type">"com.test.movesenseapp.account"</string>
    <string name = "authority">"syncAdapter.provider"</string>
</resources>